--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -66,7 +66,7 @@
    "id": "2402e09a",
    "metadata": {},
    "source": [
-    "### Random Forest Report\n",
+    "### Random Forest (with label encoded dummies) Report --current best\n",
     "![Screen%20Shot%202022-08-03%20at%2014.36.35.png](attachment:Screen%20Shot%202022-08-03%20at%2014.36.35.png)"
    ]
   },
